--- a/bio.html
+++ b/bio.html
@@ -109,9 +109,9 @@
                         </strong>
                         
                         <br>
-                        phone/text: 1.585.269.9251<br>
+                        
                         Saluda, VA &#8226; Buffalo, NY<br>
-                    <a href="mailto:mcneill.michael@gmail.com"><img src="images/gmail.png" class="skype"></a>
+                    <a href="mailto:michaelmcneill@fastmail.com"><img src="images/gmail.png" class="skype"></a>
                     <a href="skype:michaelgraymcneill?call"><img src="images/skype.ico" class="skype" /></a>
                     <br>
                         <span class="smalltext">Background photo by Meghan McNeill
