--- a/bio.html
+++ b/bio.html
@@ -98,7 +98,7 @@
 				Jeffrey Olson, Rin Ozaki, 
 				Aneal Padmanabha, Naryan Padmanabha, Ravi Padmanabha, Sam Pankey, Sean Pentland, Ryan Persaud, David Phillips, Greg Piontek, Jordan Ponzi, Joel Press, Shelly Purdy, 
 				Abdul-Rahman Qadir, 
-				Jason Rafalak, Nelson Rivera, Kelly Roberge, Derek Rodrigues, Kelly Rossum, 
+				Jason Rafalak, Nola Ranallo, Nelson Rivera, Kelly Roberge, Derek Rodrigues, Kelly Rossum, 
 				Bob Sabourin, Alec Safy, Michael Sapienza, Dave Savine, Dave Schiavone, Roger Schlee, Steve Schwelling, Miranda Scoma, Elliot Scozzaro, Jonathan Serrano, Molly Shambo, Kelly Shepard, Kevin Simpson, Phil Sims, Michael Sinicropi, Beverly Smoker, Paul Smoker, Gabriel Solomon, Alec Spiegelman, Lana Stafford, Nelson Starr, Timothy Sullivan, Brian Sulser, 
 				David Taylor, Karen Tennison, Ben Thomas, Jared Tinkham, John Troy, Mike Troy, 
 				Adam Unsworth, 
